RESOLVED FIXED307587
[grid-lanes] display:grid subgrid should not contribute item sizes to grid-lanes parent
https://bugs.webkit.org/show_bug.cgi?id=307587
Summary [grid-lanes] display:grid subgrid should not contribute item sizes to grid-la...
Brandon
Reported 2026-02-11 12:51:34 PST
When a subgrid uses display:grid (instead of display:grid-lanes) inside a grid-lanes container, the subgrid's items should not contribute their intrinsic sizes to the parent's track sizing algorithm. The subgrid should be treated as a single leaf item whose size is computed independently. Previously, traverseSubgridTreeForIntrinsicSizing would traverse into any subgrid regardless of its display type. Now it checks whether both the parent and child are grid-lanes containers before traversing into the subgrid's children.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-11 12:51:42 PST
Brandon
Comment 2 2026-02-11 12:55:50 PST
EWS
Comment 3 2026-02-25 19:52:47 PST
Committed 308253@main (e63622220d8a): <https://commits.webkit.org/308253@main> Reviewed commits have been landed. Closing PR #58433 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.