Cherry-pick e63622220d8a. rdar://171230544

[grid-lanes] display:grid subgrid should contribute item sizes to correct tracks
    https://bugs.webkit.org/show_bug.cgi?id=307587
    rdar://170168798

    Reviewed by Sammy Gill.

    When an explicitly placed subgrid uses display:grid (instead of
    display:grid-lanes) inside a grid-lanes container, the subgrid's items
    should contribute their intrinsic sizes only to the specific tracks
    where they are placed, not to all tracks in the subgrid's span.

    The issue was in computeDefiniteAndIndefiniteItemsForMasonry, which
    determines whether items have indefinite positions based on their CSS
    style (via resolveGridPositionsFromStyle). For auto-placed items inside
    the subgrid, this returns indefinite even though a display:grid subgrid
    has already placed them to specific tracks via its grid auto-placement
    algorithm.

    The fix checks whether the item's parent is a regular grid (not
    grid-lanes) using isMasonry(). If so, we treat items as having definite
    positions since the grid has placed them, and they contribute only to
    their actual tracks rather than all tracks in the subgrid span.

    Tests: imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-display-grid-intrinsic-sizing-ref.html
           imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-display-grid-intrinsic-sizing.html

    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-display-grid-intrinsic-sizing-expected.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-expected.html.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-display-grid-intrinsic-sizing-ref.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-expected.html.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-display-grid-intrinsic-sizing.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing.html.
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-expected.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing-ref.html:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-lanes/tentative/subgrid/track-sizing/grid-lanes-subgrid-intrinsic-sizing.html:
    * Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
    (WebCore::GridTrackSizingAlgorithm::computeDefiniteAndIndefiniteItemsForMasonry):

    Canonical link: https://commits.webkit.org/308253@main

Identifier: 305413.377@safari-7624-branch